fixed feedback link in footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -7,7 +7,7 @@
     \/
     %a{href: "http://metabright.blogspot.com/", target: "_blank"} Blog
     \/
-    %a{:href => "https://metabright.uservoice.com/", :target => "_blank"} Feedback
+    =link_to "Feedback", ideas_path 
     \/
     = link_to "Terms of Service", tos_path
 %div.feedback_tab
