Changing sharing to popup windows.

--- a/app/views/shared/_sharing.html.haml
+++ b/app/views/shared/_sharing.html.haml
@@ -1,9 +1,9 @@
 - title ||= "Challenge yourself on MetaBright!"
 - url ||= request.url
 %div.addthis_toolbox.social_toolbar{ style: custom_style, "addthis:url" => url, "addthis:title" => title }
-  = link_to sharing_url(:facebook, url), target: "_blank" do
+  = link_to "#", onclick: sharing_popup_javascript(:facebook, url) do
     = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+Facebook+small.png", alt: "Share on Facebook"
-  = link_to sharing_url(:twitter, url, title), target: "_blank" do
+  = link_to "#", onclick: sharing_popup_javascript(:twitter, url, title) do
     = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+twitter+small.png", alt: "Share on Twitter"
-  = link_to sharing_url(:google_plus, url, title), target: "_blank" do
+  = link_to "#", onclick: sharing_popup_javascript(:google_plus, url, title) do
     = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/icon+Google%2B+small.png", alt: "Share on Google+"
