--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -9,14 +9,19 @@
       %h4 Help shape the MetaBright roadmap
       %p This is where we share some of our planned features and upgrades. Vote for what you think we should prioritize and post ideas for things we should work on next.
   %div.ideas_body
-    %div.leftboxheader
-      Suggest What's Next
-      - if params[:action] == "show"
-        = link_to "Back to all Ideas", ideas_path, style: "float: right;"
-      - else
-        = link_to "Newest", ideas_path(sort: "created_at"), style: "margin-left:30px;"
-        |
-        = link_to "Votes", ideas_path(sort: "vote_count") 
+    %div{ style: "padding: 5px 0px 0px 5px;" }
+      %div{ style: "float: right; padding: 10px 20px 0 0;" }
+        - if params[:action] == "show"
+          = link_to "Back to all Ideas", ideas_path, style: "float: right;"
+        - else
+          = link_to "Newest", params[:action] == "ideas" ? ideas_path(sort: "created_at") : bugs_path(sort: "created_at")
+          |
+          = link_to "Votes", params[:action] == "ideas" ? ideas_path(sort: "vote_count") : bugs_path(sort: "vote_count") 
+      %ul.nav.nav-tabs
+        %li{ class: params[:action] == "ideas" ? "active" : "" }
+          = link_to "Ideas", ideas_path
+        %li{ class: params[:action] == "bugs" ? "active" : "" }
+          = link_to "Bugs", bugs_path
     %div.ideas_list
       - @ideas.each do |idea|
         %div.idea_box
