--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -393,7 +393,7 @@ h1, h2, h3, h4, h5, h6, p, div, span, a { font-family: 'MuliRegular'; font-weigh
 .ideas_header img { height:115px; }
 .ideas_header h1 {font-size:50px; display:inline-block; position: relative; top: 11px; }
 .ideas_header h4 { font-weight:bold; line-height:32px; font-size:16px }
-.ideas_body { border-radius: 4px; background-color: white; padding-bottom: 10px; }
+.ideas_body { border-radius: 4px; background-color: white; padding-bottom: 10px; border: 1px solid rgba(0, 0, 0, .1);}
 .ideas_list { background-color:white; min-height:200px; border-bottom-right-radius:6px; border-bottom-left-radius:6px; }
 .idea_box { background-color: #F9F9F9; border: 1px solid #ccc; border-radius: 3px; box-shadow: 0 2px 4px rgba(0, 0, 0, .05); border-bottom: 1px solid #DDD; margin: 20px; padding:12px 12px 6px 12px; }
 #ideapage .postfooter .leftstuff { padding-top: 0px; height: 20px; }
