persona challenge profile edits

--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -137,8 +137,10 @@ code,pre{font:inherit;}
 .leftboxfooter .accordion-toggle{text-decoration:none; padding:8px 2px 1px 2px;}
 .leftboxfooter .accordion-inner{padding:9px 15px 3px 15px;}
 .leftboxfooter .accordion{margin-bottom:4px;}
-.profile_challenge{ margin-left: 5px; margin-bottom: 10px; }
+.profile_challenge{ margin-left: 5px; margin-bottom: 12px; }
+.profile_challenge a{ text-decoration:none; }
 .challenge_progress{ display:inline-block; vertical-align:top; margin-left:4px; width:78%; color:gray; }
+.challenge_progress h5{ line-height: 12px; font-weight:bold; margin-bottom:3px;}
 .expand_contract{background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/plus.png); background-repeat:no-repeat; display:inline-block; width:11px; height:11px; vertical-align:middle; position:relative; bottom:2px; margin-right:2px; opacity:.8;}
 .active_accordion .expand_contract{background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/minus.png); height:3px; }
 
