turn off underlines on challenge completion screen

--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -255,6 +255,7 @@ body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easte
 .quizcontainer{overflow:hidden; width:768px;margin-left:auto;margin-right:auto;margin-top: 60px; border-radius:6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, .8); }
 #progressbar{width:632px; height: 40px; margin: 0 auto;}
 .completionmessagespace{display:inline-block; width:396px;overflow: hidden; border-right:1px solid rgba(0, 0, 0, .1);}
+.completionmessagespace a{ text-decoration:none; }
 .completionheader{ margin-left: 12px; }
 .completionheader span{font:normal 29px 'Muli', sans-serif;}
 .completionsubheader{margin-left:12px; font-size:16px}
