--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -1,7 +1,10 @@
 %div#ideapage{ style: "margin-top: 0px;" }    
   %div.ideas_header
     - if current_user
-      = link_to "Post New Idea", new_idea_path, class: "button button-actionable", style: "float: right;"
+      - if @ideas.first.idea?
+        = link_to "Post New Idea", new_idea_path, class: "button button-actionable", style: "float: right;"
+      - else
+        = link_to "Post New Bug", new_bug_path, class: "button button-actionable", style: "float: right;"
     %div{ style: "border-bottom: 1px solid #DDD; margin-bottom: 10px; margin-top:-10px;" }
       %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png", alt: "Stoney"}
       %h1{ style: "display: inline-block;" } MetaBright Labs
@@ -12,15 +15,15 @@
     %div{ style: "padding: 5px 0px 0px 5px;" }
       %div{ style: "float: right; padding: 10px 20px 0 0;" }
         - if params[:action] == "show"
-          = link_to "Back to all Ideas", ideas_path, style: "float: right;"
+          = link_to "Back to all #{@ideas.first.idea? ? 'Ideas' : 'Bugs'}", ideas_path, style: "float: right;"
         - else
-          = link_to "Newest", params[:action] == "ideas" ? ideas_path(sort: "created_at") : bugs_path(sort: "created_at")
+          = link_to "Newest", @ideas.first.idea? ? ideas_path(sort: "created_at") : bugs_path(sort: "created_at")
           |
-          = link_to "Votes", params[:action] == "ideas" ? ideas_path(sort: "vote_count") : bugs_path(sort: "vote_count") 
+          = link_to "Votes", @ideas.first.idea? ? ideas_path(sort: "vote_count") : bugs_path(sort: "vote_count") 
       %ul.nav.nav-tabs
-        %li{ class: params[:action] == "ideas" ? "active" : "" }
+        %li{ class: @ideas.first.idea? ? "active" : "" }
           = link_to "Ideas", ideas_path
-        %li{ class: params[:action] == "bugs" ? "active" : "" }
+        %li{ class: @ideas.first.bug? ? "active" : "" }
           = link_to "Bugs", bugs_path
     %div.ideas_list
       - @ideas.each do |idea|
