--- a/app/views/mailer/_notification_settings.html.haml
+++ b/app/views/mailer/_notification_settings.html.haml
@@ -1,6 +1,7 @@
-%span{style:"font-size:10px; color:gray;"}
-  You are receiving this message because #{@user.email} is a member of MetaBright. To adjust your email settings or to unsubscribe, 
-%span{style:"font-size:10px;"}
-  = link_to "click here.", notification_settings_url(@user.signup_token)
-%span{style:"font-size:10px; color:gray;"} 
-  MetaBright, Inc. 212 Valencia Street, Suite D, San Francisco, CA 94123
+- if @user
+  %span{style:"font-size:10px; color:gray;"}
+    You are receiving this message because #{@user.email} is a member of MetaBright. To adjust your email settings or to unsubscribe, 
+  %span{style:"font-size:10px;"}
+    = link_to "click here.", notification_settings_url(@user.signup_token)
+  %span{style:"font-size:10px; color:gray;"} 
+    MetaBright, Inc. 212 Valencia Street, Suite D, San Francisco, CA 94123
