--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -10,37 +10,85 @@
       }
     });
   });
-
+  
+:css
+  #updatespace{ min-height:162px; }
+  #topboxcontent { }
+  #topboxcontent h1{ font-size:50px; line-height:50px; }
+  #bottomboxcontent { margin-top: 97px; }
+  #bottomboxcontent .span9 div { display:inline-block; color:gray; font-size: 20px; min-width:330px; }
+  #bottomboxcontent .span9 ul { list-style:none; }
+  #profilemeat { padding:10px 12px; border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; position: relative; background-clip: padding-box; color: #333; background-color: white; min-height:200px; margin-bottom: 12px;}
+  .personabucket img { height:60px; width:60px; display:inline-block; }
+  .headerinfo { display:inline-block; font-size:20px; }
+  .bigname { font-weight:bold;  }
+  .challengecontent { margin: 20px 0 0 30px;}
+  .challengecontent > div { margin-bottom:40px; }
+  .challengebucket {margin: 15px 0 0 60px; background-color: #eff1f1; border: 1px solid rgba(0, 0, 0, .1); padding: 12px; border-radius: 6px;}
+  .challengebucket img { height:60px; width:60px; display:inline-block; }
+  .challengebucket h2 { color: #7d7d7d; text-shadow: 1px 0 0 #fff; font-weight:bold}
+  .bucketsubtitle { font-size:17px; margin-left:15px; }
+  .taskbox{ margin-left:40px; border: 1px solid rgba(0, 0, 0, .1); background-color:white; }
+  
 %div#homepage
   %div#topsection
     %div#updatespace
       = image_tag @user.picture, class: "bigheaderimage", alt: "#{@user.name}"
       %div.rightofbigheaderimage
-        %div#topboxcontent{ style: "height: 83px;" }
+        %div#topboxcontent{}
           %div{ style: "width: 119px; float:right;" }
             - if @user == current_user
-              = link_to "Edit Profile", edit_user_path(@user.username), class: "button button-standard"
+              = link_to "Edit Profile", edit_user_path(@user.username), class: "button button-actionable"
           %div.span7{style: "min-height: 65px; vertical-align: top; margin: 0; width: 600px;"}
             %h1= @user.name
-            %p{ style: "font-size: 16px; margin: 5px 0 0px 0;"}= truncate(@enrolled_personas.collect(&:name).join(", "), length: 70)
-        %div#challengecarousel_container
-          - if @enrollments.size > 3
-            %div#challengeleft_scroll
-              %a{href: "javascript:challengeslide(\"left\");"}
-                %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_left_light.png", alt: "Left"}/
-          %div#challengecarousel_inner
-            %ul#challengecarousel_ul
-              - if @enrollments.size < 4
-                = render "shared/mosaic", { custom_class: "addthis_button_facebook", link: "#", title: "Sharing is caring", subtitle: "Spread the MetaBright Gospel!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/fb_green_carousel.png" }
-              - @enrollments.each do |e|
-                = render "shared/mosaic", { custom_class: "clip_pic", pic: e.path.path_pic, link: challenge_path(e.path.permalink), title: e.path.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
-          - if @enrollments.size > 3
-            %div#challengeright_scroll
-              %a{href: "javascript:challengeslide(\"right\");"}
-                %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/arrow_angle_right_light.png", alt: "Right"}/
-      %input#challengehidden_auto_slide_seconds{:type => "hidden", :value => "0"}/
-
+            %p{ style: "font-size: 26px; margin: 5px 0 0px 0;"}= truncate(@enrolled_personas.collect(&:name).join(", "), length: 70)
+        %div#bottomboxcontent
+          %div.span9
+            %div{ style: "display:inline-block; "}
+              %ul
+                %li Education:
+                %li Company:
+            %div{ style: "display:inline-block; "}
+              %ul
+                %li Looking for:
+                %li Personal links:              
   %div.row
+    %div.span12
+      %div#profilemeat
+        %div.personabucket
+          %img{ src: "http://www.placekitten.com/100/100" }
+          %div.headerinfo
+            %span.bigname Persona name
+            %span.littledetails | Level 8 
+          %div.challengebucket
+            %img{ src: "http://www.placekitten.com/150/150" }
+            %div.headerinfo
+              %span.bigname Challenge name
+              %span.littledetails | 4,280 points, Rank: 23
+            %div.challengecontent
+              %div.arenabucket
+                %h2 What I know
+                %div.bucketsubtitle
+                  %p *Section name* Section: ## multiple choice questions answered correctly
+              %div.taskbucket
+                %h2 What I've done
+                %div.bucketsubtitle
+                  %p ## Tasks completed
+                %div.taskbox
+                  %h3 I jumped off a 15-story bridge and survived
+                  %pre{ style: "margin:20px; word-break:normal;" } kljf sadkljashd jfkahsfh askjf hjfasjfh sda fajfh afaljksfh jasj fkjf k
+              %div.crbucket
+                %h2 What I can do
+                %div.bucketsubtitle
+                  %p ## Creative Responses
+                %div.taskbox
+                  %h3 I jumped off a 15-story bridge and survived
+                  %pre{ style: "margin:20px; word-break:normal;" } kljf sadkljashd jfkahsfh askjf hjfasjfh sda fajfh afaljksfh jasj fkjf k
+                    
+            
+  
+  
+  %div.row{ style: "display:none;"}
     %div.span5
       %div.leftbox{}
         %div.leftboxheader
